--------------------------------------------------------------------------------
-- EasyPark - DDL - Sprint 1
-- Observação:
-- - Usa NUMBER GENERATED BY DEFAULT AS IDENTITY para PKs.
-- - Timestamps em TIMESTAMP WITH TIME ZONE.
-- - Checks de enumeração e índices funcionais para regras de negócio.
--------------------------------------------------------------------------------

--------------------------------------
-- 1) OPERADORA
--------------------------------------
CREATE TABLE operadora (
  id              NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cnpj            VARCHAR2(14)       NOT NULL,
  razao_social    VARCHAR2(250)      NOT NULL,
  nome_fantasia   VARCHAR2(250),
  telefone        VARCHAR2(30),
  criado_em       TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  CONSTRAINT uq_operadora_cnpj UNIQUE (cnpj),
  CONSTRAINT chk_operadora_cnpj_numeric CHECK (REGEXP_LIKE(cnpj, '^[0-9]{14}$'))
);

--------------------------------------
-- 2) ESTACIONAMENTO
--------------------------------------
CREATE TABLE estacionamento (
  id                               NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  operadora_id                     NUMBER NOT NULL REFERENCES operadora(id),
  nome                             VARCHAR2(250) NOT NULL,
  endereco                         VARCHAR2(500),
  latitude                         NUMBER(9,6),
  longitude                        NUMBER(9,6),
  espera_minutos                   NUMBER DEFAULT 10,
  tolerancia_minutos               NUMBER DEFAULT 5,
  limite_no_show                   NUMBER DEFAULT 3,
  max_antecedencia_minutos         NUMBER DEFAULT 60,
  max_antecedencia_minutos_suspenso NUMBER DEFAULT 20,
  criado_em                        TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP
);

--------------------------------------
-- 3) NIVEL
--------------------------------------
CREATE TABLE nivel (
  id                NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  estacionamento_id NUMBER NOT NULL
                       REFERENCES estacionamento(id) ON DELETE CASCADE,
  nome              VARCHAR2(150),
  ordem             NUMBER,
  criado_em         TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP
);

--------------------------------------
-- 4) TIPO_VAGA
--------------------------------------
CREATE TABLE tipo_vaga (
  id                 NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nome               VARCHAR2(50) NOT NULL,
  eh_eletrica        CHAR(1) DEFAULT 'N' NOT NULL,
  eh_acessivel       CHAR(1) DEFAULT 'N' NOT NULL,
  eh_moto            CHAR(1) DEFAULT 'N' NOT NULL,
  tarifa_por_minuto  NUMBER(12,4) NOT NULL,
  CONSTRAINT uq_tipo_vaga_nome UNIQUE (nome),
  CONSTRAINT chk_bools_tipo_vaga
    CHECK (eh_eletrica IN ('Y','N') AND eh_acessivel IN ('Y','N') AND eh_moto IN ('Y','N'))
);

--------------------------------------
-- 5) VAGA
--------------------------------------
CREATE TABLE vaga (
  id           NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nivel_id     NUMBER NOT NULL REFERENCES nivel(id) ON DELETE CASCADE,
  codigo       VARCHAR2(50) NOT NULL,
  tipo_vaga_id NUMBER NOT NULL REFERENCES tipo_vaga(id),
  ativa        CHAR(1) DEFAULT 'Y' NOT NULL,
  criado_em    TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  CONSTRAINT uq_vaga_codigo_nivel UNIQUE (nivel_id, codigo),
  CONSTRAINT chk_vaga_ativa CHECK (ativa IN ('Y','N'))
);

--------------------------------------
-- 6) SENSOR
--------------------------------------
CREATE TABLE sensor (
  id                    NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  vaga_id               NUMBER NOT NULL REFERENCES vaga(id) ON DELETE CASCADE,
  modelo                VARCHAR2(100),
  identificador_externo VARCHAR2(200),
  ativo                 CHAR(1) DEFAULT 'Y' NOT NULL,
  config                VARCHAR2(4000),
  criado_em             TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  CONSTRAINT chk_sensor_ativo CHECK (ativo IN ('Y','N'))
);

--------------------------------------
-- 7) SENSOR_EVENTO
--------------------------------------
CREATE TABLE sensor_evento (
  id           NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  sensor_id    NUMBER NOT NULL REFERENCES sensor(id) ON DELETE CASCADE,
  vaga_id      NUMBER NOT NULL REFERENCES vaga(id) ON DELETE CASCADE,
  ocorrido_em  TIMESTAMP WITH TIME ZONE NOT NULL,
  recebido_em  TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  status       VARCHAR2(30) NOT NULL,
  payload      VARCHAR2(4000),
  CONSTRAINT chk_sensor_status CHECK (status IN ('OCUPADA','LIVRE','DESCONHECIDO'))
);
CREATE INDEX idx_sensor_evento_vaga_ocorrido ON sensor_evento (vaga_id, ocorrido_em DESC);
CREATE INDEX idx_sensor_evento_sensor ON sensor_evento (sensor_id);

--------------------------------------
-- 8) VAGA_STATUS (cache do status atual por vaga)
--------------------------------------
CREATE TABLE vaga_status (
  vaga_id         NUMBER PRIMARY KEY REFERENCES vaga(id) ON DELETE CASCADE,
  status_ocupacao VARCHAR2(30),
  ultimo_ocorrido TIMESTAMP WITH TIME ZONE,
  sensor_id       NUMBER,
  CONSTRAINT fk_vaga_status_sensor
    FOREIGN KEY (sensor_id) REFERENCES sensor(id) ON DELETE SET NULL
);

--------------------------------------
-- 9) USUARIO
--------------------------------------
CREATE TABLE usuario (
  id             NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nome           VARCHAR2(250),
  email          VARCHAR2(320) NOT NULL,
  senha_hash     VARCHAR2(255) NOT NULL,
  telefone       VARCHAR2(30),
  perfil         VARCHAR2(20) DEFAULT 'cliente' NOT NULL,
  suspenso       CHAR(1) DEFAULT 'N' NOT NULL,
  no_shows       NUMBER DEFAULT 0,
  suspensao_ate  TIMESTAMP WITH TIME ZONE,
  criado_em      TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  CONSTRAINT uq_usuario_email UNIQUE (email),
  CONSTRAINT chk_usuario_suspenso CHECK (suspenso IN ('Y','N')),
  CONSTRAINT chk_usuario_perfil CHECK (perfil IN ('cliente','operador','admin'))
);

--------------------------------------
-- 10) RESERVA 
--------------------------------------
CREATE TABLE reserva (
  id                   NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  usuario_id           NUMBER NOT NULL REFERENCES usuario(id),
  vaga_id              NUMBER NOT NULL REFERENCES vaga(id),
  estado               VARCHAR2(20) NOT NULL,
  criado_em            TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  inicio_previsto      TIMESTAMP WITH TIME ZONE NOT NULL,
  duracao_minutos      NUMBER NOT NULL CHECK (duracao_minutos > 0),
  antecedencia_minutos NUMBER NOT NULL CHECK (antecedencia_minutos >= 0),

  confirmado_em        TIMESTAMP WITH TIME ZONE,
  ocupado_em           TIMESTAMP WITH TIME ZONE,
  pago_em              TIMESTAMP WITH TIME ZONE,
  motivo_cancelamento  VARCHAR2(4000),
  vaga_bloqueada       CHAR(1) DEFAULT 'N' NOT NULL CHECK (vaga_bloqueada IN ('Y','N')),

  eta_origem           VARCHAR2(100),
  eta_minutos          NUMBER,
  eta_atualizado_em    TIMESTAMP WITH TIME ZONE,

  CONSTRAINT chk_reserva_estado
    CHECK (estado IN ('PRE_RESERVA','RESERVA','OCUPADA','PAGA','CANCELADA','EXPIRED'))
);
-- Regras de concorrência via índices funcionais
CREATE UNIQUE INDEX uq_usuario_prereserva ON reserva (
  CASE WHEN estado = 'PRE_RESERVA' THEN usuario_id ELSE NULL END
);
CREATE UNIQUE INDEX uq_vaga_reserva_ativa ON reserva (
  CASE WHEN estado IN ('PRE_RESERVA','RESERVA','OCUPADA') THEN vaga_id ELSE NULL END
);
CREATE INDEX idx_reserva_inicio_previsto ON reserva (inicio_previsto);
CREATE INDEX idx_reserva_usuario ON reserva (usuario_id);
CREATE INDEX idx_reserva_vaga ON reserva (vaga_id);

--------------------------------------
-- 11) RESERVA_PRECO  (1:1 com RESERVA)
--------------------------------------
CREATE TABLE reserva_preco (
  reserva_id                     NUMBER PRIMARY KEY
                                   REFERENCES reserva(id) ON DELETE CASCADE,
  tarifa_por_minuto              NUMBER(12,4) NOT NULL,
  percentual_antecedencia        NUMBER(8,6)  NOT NULL,
  antecedencia_minutos_aplicada  NUMBER       NOT NULL,
  observacao                     VARCHAR2(200),
  valor_previsto                 NUMBER(12,4),
  valor_final                    NUMBER(12,4),
  moeda                          VARCHAR2(3)  DEFAULT 'BRL' NOT NULL,
  calculado_em                   TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP
);

--------------------------------------
-- 12) RESERVA_HIST
--------------------------------------
CREATE TABLE reserva_hist (
  id            NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  reserva_id    NUMBER NOT NULL REFERENCES reserva(id) ON DELETE CASCADE,
  from_estado   VARCHAR2(20),
  to_estado     VARCHAR2(20),
  origem_evento VARCHAR2(20),     -- ETA|SENSOR|TIMEOUT|MANUAL|PAGAMENTO
  referencia_id NUMBER,           -- ex.: id de sensor_evento/pagamento
  observacao    VARCHAR2(200),
  ocorrido_em   TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP
);
CREATE INDEX idx_reserva_hist_reserva ON reserva_hist (reserva_id, ocorrido_em DESC);

--------------------------------------
-- 13) PAGAMENTO
--------------------------------------
CREATE TABLE pagamento (
  id                 NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  reserva_id         NUMBER REFERENCES reserva(id) ON DELETE SET NULL,
  usuario_id         NUMBER REFERENCES usuario(id) ON DELETE SET NULL,
  valor              NUMBER(12,4) NOT NULL,
  status             VARCHAR2(30) NOT NULL,  -- PENDING|SUCCEEDED|FAILED|REFUNDED
  criado_em          TIMESTAMP WITH TIME ZONE DEFAULT SYSTIMESTAMP,
  metodo_pagamento   VARCHAR2(20),           -- PIX|BOLETO|CARTAO
  idempotencia_chave VARCHAR2(64),
  gateway_provider   VARCHAR2(100) DEFAULT 'pagseguro_sandbox',
  gateway_tx_id      VARCHAR2(200),
  gateway_response   VARCHAR2(4000),
  CONSTRAINT uq_pagamento_idempotencia UNIQUE (idempotencia_chave),
  CONSTRAINT chk_pagamento_status CHECK (status IN ('PENDING','SUCCEEDED','FAILED','REFUNDED'))
);
CREATE INDEX idx_pagamento_criado ON pagamento (criado_em);
CREATE INDEX idx_pagamento_reserva ON pagamento (reserva_id);
CREATE INDEX idx_pagamento_usuario ON pagamento (usuario_id);

--------------------------------------
-- 14) PAGAMENTO_PAGADOR  (1:1 com PAGAMENTO)
--------------------------------------
CREATE TABLE pagamento_pagador (
  pagamento_id NUMBER PRIMARY KEY
                 REFERENCES pagamento(id) ON DELETE CASCADE,
  nome         VARCHAR2(150),
  cpf_cnpj     VARCHAR2(14),
  email        VARCHAR2(320),
  telefone     VARCHAR2(30),
  cep          VARCHAR2(10),
  logradouro   VARCHAR2(150),
  numero       VARCHAR2(20),
  complemento  VARCHAR2(50),
  bairro       VARCHAR2(80),
  cidade       VARCHAR2(80),
  uf           VARCHAR2(2),
  CONSTRAINT chk_doc_pagador
    CHECK (cpf_cnpj IS NULL OR REGEXP_LIKE(cpf_cnpj, '^[0-9]{11}$|^[0-9]{14}$'))
);

--------------------------------------
-- 15) PAGAMENTO_CARTAO  (0..1 por PAGAMENTO)
--------------------------------------
CREATE TABLE pagamento_cartao (
  pagamento_id NUMBER PRIMARY KEY
                 REFERENCES pagamento(id) ON DELETE CASCADE,
  token        VARCHAR2(200) NOT NULL,  -- token/hash do gateway
  bandeira     VARCHAR2(20),
  final_cartao VARCHAR2(4),
  titular_nome VARCHAR2(150)
);

--------------------------------------------------------------------------------
-- Fim do DDL
--------------------------------------------------------------------------------
--------------------------------------------------------------------------------
-- EasyPark - Triggers & Procedures (Oracle) - Sprint 1
-- Conteúdo:
--   A) TRIGGER  : trg_sensor_evento_after_insert
--   B) PROCEDURE: user_eta_update_process
--   C) PROCEDURE: reserva_timeouts (usa espera/tolerância do ESTACIONAMENTO)
--                 + wrapper + job (opcionais)
--   D) PROCEDURE: reserva_prereserva_timeouts (Opção A) + wrapper + job (opcionais)
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- A) TRIGGER: Após INSERT em SENSOR_EVENTO
--     - Upsert em VAGA_STATUS (cache do status atual da vaga)
--     - Se status='OCUPADA' e houver RESERVA para a vaga, transita RESERVA->OCUPADA
--     - Registra em RESERVA_HIST a transição (origem_evento='SENSOR')
--------------------------------------------------------------------------------
CREATE OR REPLACE TRIGGER trg_sensor_evento_after_insert
AFTER INSERT ON sensor_evento
FOR EACH ROW
DECLARE
  v_reserva_id NUMBER;
BEGIN
  -- Upsert do status atual
  MERGE INTO vaga_status tgt
  USING (
    SELECT :NEW.vaga_id      AS vaga_id,
           :NEW.status       AS st,
           :NEW.ocorrido_em  AS ts,
           :NEW.sensor_id    AS sid
    FROM dual
  ) src
  ON (tgt.vaga_id = src.vaga_id)
  WHEN MATCHED THEN
    UPDATE SET tgt.status_ocupacao = src.st,
               tgt.ultimo_ocorrido = src.ts,
               tgt.sensor_id       = src.sid
  WHEN NOT MATCHED THEN
    INSERT (vaga_id, status_ocupacao, ultimo_ocorrido, sensor_id)
    VALUES (src.vaga_id, src.st, src.ts, src.sid);

  -- Se ocupou fisicamente, tentar RESERVA -> OCUPADA
  IF :NEW.status = 'OCUPADA' THEN
    BEGIN
      SELECT id
        INTO v_reserva_id
        FROM reserva
       WHERE vaga_id = :NEW.vaga_id
         AND estado  = 'RESERVA'
         AND ROWNUM = 1
       FOR UPDATE;

      UPDATE reserva
         SET estado     = 'OCUPADA',
             ocupado_em = :NEW.ocorrido_em
       WHERE id = v_reserva_id;

      INSERT INTO reserva_hist
            (reserva_id, from_estado, to_estado, origem_evento, referencia_id, observacao)
      VALUES (v_reserva_id, 'RESERVA', 'OCUPADA', 'SENSOR', :NEW.id, 'sensor_evento');
    EXCEPTION
      WHEN NO_DATA_FOUND THEN
        NULL; -- nenhuma reserva em RESERVA para a vaga
      WHEN OTHERS THEN
        NULL; -- evitar falha em cascata; alternativa: log técnico
    END;
  END IF;
END;
/
SHOW ERRORS TRIGGER trg_sensor_evento_after_insert
--------------------------------------------------------------------------------


--------------------------------------------------------------------------------
-- B) PROCEDURE: user_eta_update_process
--     - Atualiza ETA (origem, minutos, timestamp)
--     - Se estado='PRE_RESERVA' e ETA <= antecedencia_minutos, faz PRE_RESERVA->RESERVA
--       (marca confirmado_em e vaga_bloqueada='Y' + insere RESERVA_HIST)
-- Observação: sem COMMIT/ROLLBACK (transação do chamador).
--------------------------------------------------------------------------------
CREATE OR REPLACE PROCEDURE user_eta_update_process(
  p_reserva_id   IN  NUMBER,
  p_eta_minutos  IN  NUMBER,
  p_status       OUT VARCHAR2,  -- 'TRANSITIONED' | 'NO_OP' | 'NOT_FOUND' | 'ERROR'
  p_msg          OUT VARCHAR2
) AS
  v_estado VARCHAR2(20);
  v_ant    NUMBER;
BEGIN
  p_status := NULL;
  p_msg    := NULL;

  -- Lock da reserva para consistência
  BEGIN
    SELECT estado, antecedencia_minutos
      INTO v_estado, v_ant
      FROM reserva
     WHERE id = p_reserva_id
     FOR UPDATE;
  EXCEPTION
    WHEN NO_DATA_FOUND THEN
      p_status := 'NOT_FOUND';
      p_msg    := 'reserva inexistente';
      RETURN;
  END;

  -- Atualiza ETA
  UPDATE reserva
     SET eta_origem        = 'google_maps',
         eta_minutos       = p_eta_minutos,
         eta_atualizado_em = SYSTIMESTAMP
   WHERE id = p_reserva_id;

  -- PRE_RESERVA -> RESERVA se ETA <= antecedencia
  IF v_estado = 'PRE_RESERVA' AND p_eta_minutos <= NVL(v_ant, 0) THEN
    UPDATE reserva
       SET estado         = 'RESERVA',
           confirmado_em  = SYSTIMESTAMP,
           vaga_bloqueada = 'Y'
     WHERE id = p_reserva_id;

    INSERT INTO reserva_hist
          (reserva_id, from_estado, to_estado, origem_evento, observacao)
    VALUES (p_reserva_id, 'PRE_RESERVA', 'RESERVA', 'ETA', 'eta <= antecedencia');

    p_status := 'TRANSITIONED';
    p_msg    := 'PRE_RESERVA -> RESERVA';
  ELSE
    p_status := 'NO_OP';
    p_msg    := 'sem transição';
  END IF;

EXCEPTION
  WHEN OTHERS THEN
    p_status := 'ERROR';
    p_msg    := SQLERRM;
END user_eta_update_process;
/
SHOW ERRORS PROCEDURE user_eta_update_process
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- C) PROCEDURE: reserva_timeouts (USANDO VALORES DO ESTACIONAMENTO)
--     - Cancela reservas em 'RESERVA' que excederam:
--          confirmado_em + (espera_minutos + tolerancia_minutos) DO SEU ESTACIONAMENTO
--     - Libera vaga_bloqueada e registra histórico (origem_evento='TIMEOUT')
-- Observação: esta procedure faz COMMIT; ideal para rodar via DBMS_SCHEDULER.
--------------------------------------------------------------------------------
CREATE OR REPLACE PROCEDURE reserva_timeouts(
  p_out_canceladas OUT NUMBER
) AS
  CURSOR c_res IS
    SELECT r.id,
           r.confirmado_em,
           NVL(e.espera_minutos, 10)      AS espera_min,
           NVL(e.tolerancia_minutos, 5)   AS tolerancia_min
      FROM reserva r
      JOIN vaga v   ON v.id = r.vaga_id
      JOIN nivel n  ON n.id = v.nivel_id
      JOIN estacionamento e ON e.id = n.estacionamento_id
     WHERE r.estado = 'RESERVA'
       AND r.confirmado_em IS NOT NULL
     FOR UPDATE SKIP LOCKED;

  v_cnt NUMBER := 0;
BEGIN
  FOR r IN c_res LOOP
    IF r.confirmado_em
       + NUMTODSINTERVAL(r.espera_min + r.tolerancia_min, 'MINUTE')
       <= SYSTIMESTAMP
    THEN
      UPDATE reserva
         SET estado = 'CANCELADA',
             motivo_cancelamento = 'TIMEOUT_NO_SHOW',
             vaga_bloqueada = 'N'
       WHERE id = r.id;

      INSERT INTO reserva_hist
            (reserva_id, from_estado, to_estado, origem_evento, observacao)
      VALUES (r.id, 'RESERVA', 'CANCELADA', 'TIMEOUT', 'prazo + tolerancia (por estacionamento)');

      v_cnt := v_cnt + 1;
    END IF;
  END LOOP;

  COMMIT;
  p_out_canceladas := v_cnt;

EXCEPTION
  WHEN OTHERS THEN
    ROLLBACK;
    p_out_canceladas := -1;
    RAISE;
END reserva_timeouts;
/
SHOW ERRORS PROCEDURE reserva_timeouts
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- D) PROCEDURE: reserva_prereserva_timeouts (Opção A)
--     - Cancela PRE_RESERVA se now > (inicio_previsto + tolerancia do estacionamento)
--     - Registra histórico (origem_evento='TIMEOUT', observação 'pre-reserva expirada')
-- Observação: usa a mesma tolerância do estacionamento; faz COMMIT.
--------------------------------------------------------------------------------
CREATE OR REPLACE PROCEDURE reserva_prereserva_timeouts(
  p_out_canceladas OUT NUMBER
) AS
  CURSOR c_res IS
    SELECT r.id,
           r.inicio_previsto,
           NVL(e.tolerancia_minutos, 5) AS tolerancia_min
      FROM reserva r
      JOIN vaga v   ON v.id = r.vaga_id
      JOIN nivel n  ON n.id = v.nivel_id
      JOIN estacionamento e ON e.id = n.estacionamento_id
     WHERE r.estado = 'PRE_RESERVA'
       AND r.inicio_previsto IS NOT NULL
     FOR UPDATE OF r.id SKIP LOCKED;

  v_cnt NUMBER := 0;
BEGIN
  FOR r IN c_res LOOP
    IF r.inicio_previsto
       + NUMTODSINTERVAL(r.tolerancia_min, 'MINUTE')
       <= SYSTIMESTAMP
    THEN
      UPDATE reserva
         SET estado = 'CANCELADA',
             motivo_cancelamento = 'PRERESERVA_TIMEOUT',
             vaga_bloqueada = 'N'
       WHERE id = r.id;

      INSERT INTO reserva_hist
            (reserva_id, from_estado, to_estado, origem_evento, observacao)
      VALUES (r.id, 'PRE_RESERVA', 'CANCELADA', 'TIMEOUT', 'pre-reserva expirada');

      v_cnt := v_cnt + 1;
    END IF;
  END LOOP;

  COMMIT;
  p_out_canceladas := v_cnt;

EXCEPTION
  WHEN OTHERS THEN
    ROLLBACK;
    p_out_canceladas := -1;
    RAISE;
END reserva_prereserva_timeouts;
/
SHOW ERRORS PROCEDURE reserva_prereserva_timeouts
--------------------------------------------------------------------------------


--------------------------------------------------------------------------------
-- Fim do arquivo
--------------------------------------------------------------------------------
